--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,12 @@
 <div class=comment-content>
   <%= @comment %>
+
 <h5>Enter your comment below:</h5>
 <%= form_for comment do |f| %>
   <%= f.label "Comment Content" %>
   <%= f.text_field :content %>
 <h5>Choose an existing User or Create a New User</h5>
-  <%= f.collection_check_boxes :user_id, User.all, :id, :username%>
+  <%= f.collection_select :user_id, User.all, :id, :username%>
   <%= f.fields_for :user do |users_fields| %>
     <%= users_fields.label "User Name" %>
     <%= users_fields.text_field :username %>
