--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,13 +3,15 @@
 </div>
 <%= form_for post do |f| %>
   <%= f.label "Title" %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %><p>
   <%= f.label "Content" %>
-  <%= f.text_area :content %>
+  <%= f.text_area :content %><p>
   <%= f.hidden_field :post_id, :value => @post.id %>
-  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  <%= f.label "Choose or Create your Post Category" %><p>
+  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><p>
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+    <%= categories_fields.label "New Category Name" %>
     <%= categories_fields.text_field :name %>
-  <% end %>
-  <%= f.submit %>
+  <% end %><p>
+  <%= f.submit %></p>
 <% end %>
