--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,16 @@
 <div class=comment-content>
-
-<h5>Enter your comment below:</h5>
-<%= form_for :comment do |f| %>
-  <%= f.label "Comment Content" %>
-  <%= f.text_field :content %><p>
-<h5>Choose an existing User or Create a New User</h5>
-  <%= f.collection_select :user_id, User.all, :id, :username%><p>
-  <%= f.fields_for :user do |users_fields| %>
-    <%= users_fields.label "User Name" %>
-    <%= users_fields.text_field :username %><p>
-    <%= users_fields.label "User Email" %>
-    <%= users_fields.text_field :email %><p>
+  <h5>Enter your comment below:</h5>
+  <%= form_for :comment, :user do |f| %>
+    <%= f.label "Comment Content" %>
+    <%= f.text_field :content %><p>
+  <h5>Choose an existing User or Create a New User</h5>
+    <%= f.collection_select :user_id, User.all, :id, :username%><p>
+    <%= f.fields_for :user do |users_fields| %>
+      <%= users_fields.label "User Name" %>
+      <%= users_fields.text_field :username %><p>
+      <%= users_fields.label "User Email" %>
+      <%= users_fields.text_field :email %><p>
+    <% end %>
+  <%= f.submit "Create Comment"%>
   <% end %>
-<%= f.submit "Create Comment"%>
-<% end %>
 </div>
