--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,38 @@
-<div class=post-content>
-<h3>Post Title: "<%= @post.title %>"</h3>
-<h3>Post Content:</h3>
-<p>"<%= @post.content %>"</p>
-<p><%= @post.categories.name %></p>
+<h2><%= @post.title %> </h2>
+<p> <%= @post.content %></p>
 
-<% @post.comments.each do |comment| %>
-  <p>Username: <%= comment.user.username %> said: <%= comment.content %></p>
+<h3>Categories:</h3>
+<p>
+<% @post.categories.each do |category| %>
+<li> <%= link_to category.name, category %></li>
+<%end%>
+</p>
+
+<h3>Comments:</h3>
+<p>
+  <% @post.comments.each do |comment| %>
+  <li> <%= comment.user.username %> says: <%=comment.content%></li>
+  <% end %>
+</p>
+
+<h3>Comments By User:</h3>
+<p>
+  <% @post.users.uniq.each do |user| %>
+  <li><%= link_to user.username, user_path(user) %></li>
+  <% end %>
+</p>
+
+<h3>Add a New Comment</h3>
+<p>
+<%= form_for @post.comments.build do |f| %>
+<%= f.label :content %>
+<%= f.text_field :content %>
+
+<%= f.collection_select :user_id, User.all, :id, :username, include_blank: 'New User'%>
+<%= f.hidden_field :post_id %>
+<%= f.fields_for :user, @post.comments.last.build_user do |user_fields|%>
+<%= user_fields.text_field :username %>
 <% end %>
-</div>
-
-<%= render 'comments/form', comment: @post.comments.new %>
+<%= f.submit %>
+<% end %>
+</p>
