--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,16 +1,15 @@
-<div class=post-content>
-  <%= @post.content %>
-</div>
-<%= form_for post do |f| %>
+<%= form_for @post do |f| %>
   <%= f.label "Title" %>
   <%= f.text_field :title %><p>
   <%= f.label "Content" %>
   <%= f.text_area :content %><p>
+
   <%= f.hidden_field :post_id, :value => @post.id %>
 
   <%= f.label "Choose or Create your Post Category" %><p>
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><p>
-  <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+
+  <%= f.fields_for :categories, @post.categories.build do |categories_fields| %>
     <%= categories_fields.label "New Category Name" %>
     <%= categories_fields.text_field :name %>
   <% end %><p>
