--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,9 +11,10 @@
     <%= f.text_area :content%> 
    <%= f.hidden_field :post_id, :value => @post.id %>
     <%= f.collection_select :user_id, User.all, :id, :username, :prompt => true  %>
-    <%= f.fields_for :usermame, post.usernames.build do |usernames_fiellds| %>
-    <%= usernames_fields.text_field :name %>
+    <%= f.fields_for :username do |u| %>
+    <%= u.label :username %>
     <% end %>
+
     
     <%= f.submit 'Create Comment' %>
   <% end %>
