--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,30 @@
+<% #byebug %>
+<h1><%= @post.title %></h1>
+<h2><%= @post.content %></h2>
 
+<% @post.categories.each do |cat| %>
+  <h3><%= cat.name %></h3>
+<% end %>
+
+<% @post.users.uniq.each do |use| %>
+  <h3><%= link_to use.username, user_path(use) %></h3>
+<% end %>
+
+
+<% @post.comments.each do |comment| %>
+  <% #byebug %>
+  <p><%= comment.user.username %> says: <%= comment.content %></p>
+<% end %>
+
+<%= form_for @comment do |f| %>
+  <%= f.hidden_field :post_id, value: @post.id %>
+  <%= f.label "New Comment" %><br>
+  <%= f.text_field :content %><br>
+  <%= f.collection_select :user_id, User.all, :id, :username, {prompt: true} %><br>
+  <%= f.fields_for :user, @comment.build_user do |user_info| %>
+    <%= user_info.text_field :username %>
+  <% end %>
+
+  <%= f.submit "Create Comment"%>
+
+<% end %>
